  * open file from window location
  * major refactoring of code
  * prevent CR in numeric text area
  * added restore from trash
  * added wait block
  * added save/restore session
  * added stop turtle
  * first pass on a palette strategy
  * added save file to turtle.sugarlabs.org (when running from server) w/tch
  * added svg output to window
  * added menu to trash for restore and clear all
  * fixed block/turtle/canvas layering
  * fixed mouse down logic
  * figured out how to do inline svg with easeljs...
    beginning to convert to svg factory methods.
  * using container caching on blocks
  * fixed labels on random block
  * fixed label on less block (use &lt;)
  * fixed infinite loop problem when searching for expandables
  * fixed more issues with caching
  * reload media thumbnails on load
  * added collapsible stacks
  * added copy/paste of stacks
  * rename action blocks when loading projects
  * added palette entries when encountering new storein blocks
  * allow dragging from collapse button
  * added forever block
  * added 'stop action' (AKA break)
  * fixed several format issues with saved SVG
  * saving SVG thumbnail to server along with project file
  * seeding SVG with bg color on run
  * failed experimenting with zoom and scroll settings
  * fixed rounding bug in repeat code
  * fixed menu tearing issues
  * fixed placement of new items in Blocks menu
  * improved highlight logic
  * fixed labels on collapsed stacks
  * better compartmentalization of block code
   (using a dictionary for the code associated with each "advanced" block)
  * Fixed scaling issues with SVG output

TODO:
  * don't save full-sized bitmap to session
  * fix canvas sizing, resizing
  * selectable menu of samples
  * use container caching on palette
  * use snap to pixels
  * user defined blocks
  * more sensors
  * implement if-then-else, while, until
  * implement and or not
  * keyboard short cuts
  * cannot open same file twice in a row (no change event?)