@@ -92,11 +92,10 @@
   * better compartmentalization of block code
    (using a dictionary for the code associated with each "advanced" block)
   * Fixed scaling issues with SVG output
+  * Implemented selectable menu of samples (for server version).
 
 TODO:
-  * don't save full-sized bitmap to session
-  * fix canvas sizing, resizing
-  * selectable menu of samples
+  * check to see if running from a server or a local copy
   * use container caching on palette
   * use snap to pixels
   * user defined blocks
@@ -104,4 +103,12 @@ TODO:
   * implement if-then-else, while, until
   * implement and or not
   * keyboard short cuts
+
+BUGS:
+  * don't save full-sized bitmap to session
+  * fix canvas sizing, resizing
   * cannot open same file twice in a row (no change event?)
+  * occasional misplaced DOM textarea
+  * occasional misplaced highlight filler
+  * occasional crash due to uncaching something that hasn't been cached?
+  * occasional bad init
